test/modules/lydia/inFunc.chpl
module M {
  proc uhoh() {
    module realBad {
    }
  }
}

uhoh();
